force-app/main/default/objects/Product_Request__c/Product_Request__c.object-meta.xml
<CustomObject>
    <label>Product Request</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>