force-app/main/default/objects/Product_Request__c/fields/Destination_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>Destination_Org_Id__c</fullName>
    <inlineHelpText>ID of the destination org, if known, or username to be used</inlineHelpText>
    <label>Org Id or Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>