force-app/main/default/objects/Product_Request__c/fields/Org_Credentials__c.field-meta.xml
<CustomField>
    <fullName>Org_Credentials__c</fullName>
    <label>Org Credentials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I will send over org credentials</fullName>
                <default>true</default>
                <label>I will send over org credentials</label>
            </value>
            <value>
                <fullName>Org credentials have been sent</fullName>
            </value>
            <value>
                <fullName>N/A - Not relevant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>