force-app/main/default/objects/Product_Request__c/fields/Products_IP_Included__c.field-meta.xml
<CustomField>
    <fullName>Products_IP_Included__c</fullName>
    <inlineHelpText>IP related to this request. Only select the exact accelerators that are to be directly associated with this request.</inlineHelpText>
    <label>Products/IP Included</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unmanaged_IP</valueSetName>
    </valueSet>
</CustomField>