force-app/main/default/objects/Product_Request__c/fields/Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Request_Notes__c</fullName>
    <label>Request Notes</label>
    <type>TextArea</type>
</CustomField>