force-app/main/default/objects/Product_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Defect Resolution</fullName>
            </value>
            <value>
                <fullName>Troubleshooting</fullName>
            </value>
            <value>
                <fullName>Setup/Config Assistance</fullName>
            </value>
            <value>
                <fullName>App Customization</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>IP Upgrade</fullName>
            </value>
            <value>
                <fullName>Demo / Pre-Sales</fullName>
                <isActive>false</isActive>
                <label>Demo / Pre-Sales</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Product Management</fullName>
                <isActive>false</isActive>
                <label>Product Management</label>
            </value>
            <value>
                <fullName>Project / Implementation</fullName>
                <isActive>false</isActive>
                <label>Project / Implementation</label>
            </value>
            <value>
                <fullName>Salesforce SE Request</fullName>
                <isActive>false</isActive>
                <label>Salesforce SE Request</label>
            </value>
            <value>
                <fullName>Standalone Shipment</fullName>
                <isActive>false</isActive>
                <label>Standalone Shipment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>