force-app/main/default/objects/Product_Request__c/fields/Requested_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Deployment_Date__c</fullName>
    <inlineHelpText>Please try to provide at least 2 business days advance notice; 5 business days is ideal. If a deployment is needed ASAP, make sure to contact Product Management directly after submitting the form.</inlineHelpText>
    <label>Requested Action Date</label>
    <type>Date</type>
</CustomField>