force-app/main/default/objects/Product_Request__c/fields/Requestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Email__c</fullName>
    <inlineHelpText>For guest users only; otherwise, leave blank.</inlineHelpText>
    <label>Requestor Email</label>
    <type>Email</type>
</CustomField>