force-app/main/default/objects/Product_Request__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <inlineHelpText>Name of requestor, if made by a guest user. Authenticated users do not need to fill this out.</inlineHelpText>
    <label>Requestor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>