force-app/main/default/objects/Product_Request__c/listViews/Deployment_Owners_Deployment_Request.listView-meta.xml
<ListView>
    <fullName>Deployment_Owners_Deployment_Request</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Opportunity__c</columns>
    <columns>Request_Summary__c</columns>
    <filterScope>Queue</filterScope>
    <label>Deployment Owners</label>
    <queue>Deployment_Owners</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>